--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,34 +2,29 @@ name: Main
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['main']
-
-permissions:
-  contents: read
+    branches: ["main"]
 
 jobs:
-  build:
+  tests:
+    name: Run tests
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.2"
+          extensions: mbstring, pdo, pdo_sqlite
+          coverage: none
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
-
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+        run: composer install -n --prefer-dist
 
-      - name: Run Pest tests
-        run: composer run-script test
+      - name: Execute tests
+        run: ./vendor/bin/pest --no-coverage
